--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "devDependencies": {
-    "@types/node": "^22.10.2"
+    "@types/node": "^22.10.2",
+    "tsx": "^4.19.2"
   },
   "dependencies": {
-    "prompt-sync": "^4.2.0"
+    "@types/node": "^22.10.2",
+    "prompt-sync": "^4.2.0",
+    "tsx": "^4.19.2"
+  },
+  "scripts": {
+    "dev": "tsx main.ts"
   }
 }
