--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
       - master
 
 jobs:
-  test-independent-build:
+  independent-build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -26,9 +26,9 @@ jobs:
       - name: Run development server
         run: npx tsx main.ts
 
-  test-interactive-mode:
+  interactive-mode:
     runs-on: ubuntu-latest
-    needs: test-independent-build
+    needs: independent-build
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -44,9 +44,9 @@ jobs:
       - name: Run development server
         run: npm run dev
 
-  test-script-mode:
+  script-mode:
     runs-on: ubuntu-latest
-    needs: test-independent-build
+    needs: independent-build
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -62,9 +62,9 @@ jobs:
       - name: Script Execution Tests
         run: npm run dev -- file.nv
 
-  test-docker-script:
+  docker-script:
     runs-on: ubuntu-latest
-    needs: test-script-mode
+    needs: script-mode
     steps:
       - name: Pull NovaScript Docker Image
         run: docker pull aritrabb/novascript:0.4.0
